--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -203,6 +203,7 @@ header {
   padding: 80px 40px;
   position: sticky;
   top: 14rem;
+  margin-bottom: 100px;
 }
 .comments__title {
   color: var(--gray-7);
@@ -266,6 +267,7 @@ footer {
   line-height: var(--text-4-lineHeight);
   text-align: center;
   border: none;
+  cursor: pointer;
 }
 .button--brand {
   background-color: var(--brand-1);
@@ -283,4 +285,74 @@ footer {
   background-color: var(--brand-2);
   border-color: var(--brand-2);
   transition: 300ms;
+}
+.modal {
+  background-color: var(--gray-2);
+  width: 20%;
+  height: fit-content;
+  border: solid 2px var(--brand-1);
+  padding: 25px;
+}
+.modal::backdrop{
+  background: #191C1FCC;
+  opacity: 0.8;
+}
+.modal div{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 35px;
+}
+.modal__title {
+  color: var(--gray-6);
+  font-size: var(--title-3-size);
+  font-weight: var(--title-3-weight);
+  line-height: var(--title-3-lineHeight);
+}
+.modal__close {
+  background-color: var(--gray-3);
+  color: var(--gray-4);
+  font-size: var(--text-1-size);
+  font-weight: var(--text-1-weight);
+  line-height: var(--text-1-lineHeight);
+  font-family: "Nunito", sans-serif;
+  font-weight: var(--text-4-weight);
+  padding: 5px 15px;
+  cursor: pointer;
+}
+.modal__content {
+  color: var(--gray-4);
+  font-size: var(--text-3-size);
+  font-weight: var(--text-3-weight);
+  line-height: var(--text-3-lineHeight);
+  margin-bottom: 30px;
+}
+.modal__input {
+  background-color: var(--gray-1);
+  color: var(--gray-4);
+  font-size: var(--text-1-size);
+  font-weight: var(--text-1-weight);
+  line-height: var(--text-1-lineHeight);
+  box-sizing: border-box;
+  width: 100%;
+  padding: 15px 25px;
+  margin-bottom: 30px;
+  border: solid 1px var(--gray-1);
+/*   cursor: pointer; */
+}
+.modal__input:hover {
+  background-color: var(--gray-3);
+  border-color: var(--gray-3);
+  transition: 300ms;
+}
+.modal__input:focus {
+  background-color: var(--gray-2);
+  color: var(--gray-6);
+  outline: none;
+  border-color: var(--brand-1);
+  transition: 300ms;
+}
+.button--modal {
+  margin: auto;
+  width: 100%;
 }
