--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -1,3 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 @import url("./reset.css");
 @import url("./style.css");
